Fix HelpButton alignment

--- a/components/dotations/results/commune-type/dotation-trend/DotationTrend.module.scss
+++ b/components/dotations/results/commune-type/dotation-trend/DotationTrend.module.scss
@@ -14,6 +14,11 @@
     .title {
       font-weight: bold;
       font-style: italic;
+      display: flex;
+
+      :last-child {
+        margin-left: 3px;
+      }
     }
 
     .subTitle {
